--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
    align-items: center;
    justify-content: center;
    width: 1000px;
-   border: 1px solid tomato;
+   border: 1px solid transparent;
    margin-top: 100px;
    margin-left: auto;
    margin-right: auto;
