--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,10 @@ body {
    display: block;
    text-align-last: left;
 }
+.container--result {
+   margin-top: 0;
+   padding-top: 0;
+}
 
 .bal-result__title {
    font-family:serif;
