--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,25 @@ body {
    padding: 20px;
    text-align: center;
 }
+
+.header__image-container{
+   position: relative;
+   z-index: 1;
+}
+.header__image-container::before{
+   position: absolute;
+    top: 0; 
+    left: 0;
+  width: 100%;
+  height: 100%;
+   background-image: linear-gradient(to bottom, 
+   rgba(12, 11, 11, 0.589),
+   rgba(8, 8, 8, 0.438));
+   border-radius: 10px;
+   content: "";
+   z-index: 2;
+}
+
 .header_title {
    text-transform: uppercase;
    font-size: 28px;
