--- a/css/styles.css
+++ b/css/styles.css
@@ -45,14 +45,15 @@ body {
    z-index: 1;
 }
 .header__image-container::before{
-   position: absolute;
-    top: 0; 
-    left: 0;
-  width: 100%;
-  height: 100%;
-   background-image: linear-gradient(to bottom, 
-   rgba(12, 11, 11, 0.589),
-   rgba(8, 8, 8, 0.438));
+     position: absolute;
+     top: 0; 
+     left: 0;
+     width: 120px;
+     height: 120px;
+     background-repeat: no-repeat;
+     background-size:120px 120px ;
+     background-position:center center;
+     background-image: url("../img/student.png");
    border-radius: 10px;
    content: "";
    z-index: 2;
